# FFmpegTest

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmepgtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ffmepgtest/: HuGePlayer.java  MainActivity.java  PermissionUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/ffmepgtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
